--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -42,7 +42,9 @@
             <div class="carousel-caption">
               <h1>classify <strong>Penn</strong></h1>
               <p>The best way to buy and sell things, find housing, engage with and find jobs in the your college community.</p>
+              {{#unless currentUser}}
               <p><a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Sign up today</a></p>
+              {{/unless}}
             </div>
           </div>
         </div>
@@ -52,7 +54,9 @@
             <div class="carousel-caption">
               <h1>classify <strong>Penn</strong></h1>
               <p>The best way to buy and sell things, find housing, engage with and find jobs in the your college community.</p>
+              {{#unless currentUser}}
               <p><a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Sign up today</a></p>
+              {{/unless}}
             </div>
           </div>
         </div>
@@ -62,7 +66,9 @@
             <div class="carousel-caption">
               <h1>classify <strong>Penn</strong></h1>
               <p>The best way to buy and sell things, find housing, engage with and find jobs in the your college community.</p>
+              {{#unless currentUser}}
               <p><a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Sign up today</a></p>
+              {{/unless}}
             </div>
           </div>
         </div>
