--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,4 +1,3 @@
-
 /* SIGN UP MODAL */
 .modal-footer {
     padding: 10px;
@@ -33,7 +32,7 @@
 }
 
 
-/* POST PAGE */ 
+/* SUBMIT POST PAGE ===================*/ 
 
 .rightCaret {
     font-size: 40px;
@@ -1154,7 +1153,19 @@ body {
   min-height:100%;
 }
 
-/* Styling for post page===========================================*/
+/* Styling for listing/post page===========================================*/
+.panel-heading .accordion-toggle:after {
+    /* symbol for "opening" panels */
+    font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
+    content: "\e114";    /* adjust as needed, taken from bootstrap.css */
+    float: right;        /* adjust as needed */
+    color: gray;         /* adjust as needed */
+}
+.panel-heading .accordion-toggle.collapsed:after {
+    /* symbol for "collapsed" panels */
+    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+}
+
 #sidebar {
   background-color: rgb(239,239,239);
 }
