more accordion work

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,3 +1,12 @@
+/* LISTING PAGE */
+
+.panel-group .panel + .panel {
+    margin-top: 0px;
+
+}
+.panel-group .panel {
+    border-radius: 0px;
+}
 
 /* SIGN UP MODAL */
 .modal-footer {
