--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -71,7 +71,7 @@
 }
 .continue {
     margin-top: 30px;
-    margin-left: 320px;
+    margin-left: 270px;
 }
 
 .descDiv {
@@ -117,9 +117,7 @@
 
 .description {
     width: 300px !important;
-    margin-right: 351px;
-
-    
+    margin-right: 351px;    
 }
 
 .inputPost {
@@ -132,9 +130,22 @@
     margin-left: 0px;
 
 }
+.titleInputPost {
+    height: 40px;
+    width:300px;
+    text-align: left;
+    padding-left: 5px;
+    border: solid;
+    border-width: 1px;
+    border-color: rgb(230,230,230);
+    margin-left: 0px;
+    font-size: 14px;
+
+}
 .descriptionInput {
     width: 645px;
     text-align: left;
+    padding-left: 5px;
     height: 60px;
     resize: vertical;
 }
@@ -217,11 +228,12 @@
 
 
 .div3 {
-    display: grid;
+    display: -webkit-inline-box;
     margin-top: 30px;
     font-size: 20px;
     min-width: 770px;
 }
+
 
 .inputPost {
     font-size: 14px;
