--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,12 +1,18 @@
 <template name = "home">
 {{>modal}}
+<!-- {{>modalSearching}} -->
+
+
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 
+                
                 <a class="logo page-scroll" href="/">logo</a>
+                <a class="fa fa-search search"> search</a>
+                
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
