--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -3,7 +3,7 @@
   <!-- {{> listingPageHeader}} -->
 
   <!--main-->
-  <div class="container">
+  <div class="container listingPageContainer">
    <div class="row">
 
     {{>leftBarListingPage}}
