--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -8,12 +8,12 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                
-                
+
                 <a class="logo page-scroll" href="/">logo</a>
                 <a class="fa fa-search search"> search</a>
-                
+
             </div>
+              {{> errors}}
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
