--- a/client/views/listings/listingPage/leftBarListingPage.html
+++ b/client/views/listings/listingPage/leftBarListingPage.html
@@ -1,12 +1,11 @@
 <template name ="leftBarListingPage">
   <!--left-->
-  <div class="col-md-3" id="leftCol">
+
     
     <!-- <h3 class = "categoryHeading">
       Category List
     </h3> -->
     <div class="panel-group" id="accordion">
-      {{>search}} 
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
@@ -74,6 +73,5 @@
   </div>
 </div>
     
-
-  </div> <!--/left -->     
+ <!--/left -->     
 </template>      
