--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -1,15 +1,66 @@
 <template name="listingPage">
 
-  <!-- {{> listingPageHeader}} -->
+ 
+     <div class="container">
+      <div class="row">
+        <div class = "titlePost">
+         <h2 class = "postPageTitle">      
+           <div>{{title}}</div> 
+         </h2>
+       </div>
+     </div>
+     <div class="row">
+      <div class="col-lg-12">
+        <form name="sentMessage" id="contactForm" novalidate>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                <h4 class = "postPageTitle">      
+                 <div>Search {{title}}</div>
+               </h4>
+              
+               
+               <div id="contentwrapper">
+    <div id="contentcolumn">
+        <div class="innertube"><input type="text" class="form-control searchListings" placeholder="" id="name" required data-validation-required-message="Please enter your name."></div>
+    </div>
+</div>
+<div id="leftcolumn">
+    <div class="innertube"><i class = "glyphicon glyphicon-search"></i></div>
+</div>
+             </div>
+             <div class="form-group">
+              <h4 class = "postPageTitle">      
+               <div>Category List</div> 
+             </h4>
+             {{> leftBarListingPage }}
+           </div>         
+         </div>
+         <div class="col-md-8">
+          <p>
+           <div class="posts">
 
-  <!--main-->
-  <div class="container listingPageContainer">
+            <h4 class = "postPageTitle">      
+             <div>Latests Listings</div> 
+           </h4>
+           {{> postsList}}
+         </div>
+       </p>
+     </div>
+     <div class="clearfix"></div>
+
+   </div>
+ </form>
+</div>
+</div>
+</div>
+   <!-- <div class="container listingPageContainer">
    <div class="row">
 
-    {{>leftBarListingPage}}
+    {{>leftBarListingPage}} -->
 
     <!--right-->
-    <div class="col-md-9">
+    <!-- <div class="col-md-9">
       <h2 id="sec1"> 
         <div class="listingPageHeader">
          <div style= "text-transform:capitalize">Latest Listings in</div> 
@@ -23,12 +74,14 @@
          {{> postsList}}
         </div>
       </p>
-      
+    -->      
 
 
-    </div><!--/right-->
-  </div><!--/row-->
-</div><!--/container-->
+    <!-- </div> --><!--/right-->
+    <!-- </div> --><!--/row-->
+    <!-- </div> --><!--/container-->
 
-
-</template>
+<script type="text/javascript">
+document.getElementById('name').focus()
+</script>
+  </template>
