--- a/client/views/listings/listingPage/search.html
+++ b/client/views/listings/listingPage/search.html
@@ -1,4 +1,4 @@
-<template name ="search">
+<!-- <template name ="search">
 	{{> leaderboard}}
 </template>
 
@@ -43,4 +43,4 @@
 <template name="player">
     <span style="cursor: pointer"><strong>{{title}}</strong></span>
     {{description}}
-</template>
+</template> -->
