--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -371,7 +371,7 @@ body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     min-width: 800px;
-    height: 100%;
+    height: 100%; margin: 0px; padding: 0px;
 }
 
 .text-muted {
