--- a/client/views/application/searching.html
+++ b/client/views/application/searching.html
@@ -1,19 +1,16 @@
 <template name ="modalSearching">
+
   <!-- Modal (modal is being rendered in 'home' template)-->
-  <div class="modalSearching fade modalDialogSearching" id="myModalSearching" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modalDialogSearching">                                             
-      <div class="modalContentSearching">                                                      
-       {{> modalBodySearching}} 
-      </div>
+  <div class="modal fade" id="myModalSearching" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" id="customModal">                                             
+                                                
+        <a href="#" class="closingSearch" data-dismiss="modal">X <span class="esc">[esc]</span></a> 
+        
     </div>
   </div> 
+
 </template>
 
 
 
 
-<template name = "modalBodySearching">
-   <div class="modal-body" >                                        
- <a href="#" class="closeSearching" data-dismiss="modal">X</a>   
-  </div>
-</template>
