--- a/client/views/listings/postPage/postPage.html
+++ b/client/views/listings/postPage/postPage.html
@@ -1,26 +1,347 @@
 <template name="postPage">
+  <div class="container containerPostPage">
 
+        <div class="row">
+
+            <!-- Blog Post Content Column -->
+            <div class="col-lg-8">
+
+                <!-- Blog Post -->
+
+                <!-- Title -->
+                <h1>{{ title }}</h1>
+
+                <!-- Author -->
+                <p class="lead">
+                    by <a href="#">{{authors}}</a>
+                </p>
+
+                <hr>
+
+                <!-- Date/Time -->
+                <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
+
+                
+<hr>
+                <!-- Preview Image -->
+                <!-- thumb navigation carousel -->
+
+<!-- main slider carousel -->
+<div class="row">
+    <div class="col-md-12" id="slider">
+        <div class="col-md-12" id="carousel-bounding-box">
+            <div id="myCarousel" class="carousel slide">
+                <!-- main slider carousel items -->
+                <div class="carousel-inner">
+                    <div class="active item" data-slide-number="0">
+                        <img src="http://placehold.it/1200x480&amp;text=one" class="img-responsive">
+                    </div>
+                    <div class="item" data-slide-to="1">
+                        <img src="http://placehold.it/1200x480&amp;text=two" class="img-responsive">
+                    </div>
+                    <div class="item" data-slide-number="2">
+                        <img src="http://placehold.it/1200x480&amp;text=three" class="img-responsive">
+                    </div>
+                    <div class="item" data-slide-number="3">
+                        <img src="http://placehold.it/1200x480&amp;text=four" class="img-responsive">
+                    </div>
+                    <div class="item" data-slide-number="4">
+                        <img src="http://placehold.it/1200x480&amp;text=five" class="img-responsive">
+                    </div>
+                    <div class="item" data-slide-number="5">
+                        <img src="http://placehold.it/1200x480&amp;text=six" class="img-responsive">
+                    </div>
+                    <div class="item" data-slide-number="6">
+                        <img src="http://placehold.it/1200x480&amp;text=seven" class="img-responsive">
+                    </div>
+                    <div class="item" data-slide-number="7">
+                        <img src="http://placehold.it/1200x480&amp;text=eight" class="img-responsive">
+                    </div>
+                </div>
+                <!-- main slider carousel nav controls --> <a class="carousel-control left" href="#myCarousel" data-slide="prev">‹</a>
+
+                <a class="carousel-control right" href="#myCarousel" data-slide="next">›</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="col-md-12 " id="slider-thumbs">
+    <!-- thumb navigation carousel items -->
+    <ul class="list-inline">
+        <li> <a id="carousel-selector-0" class="selected">
+        <img src="http://placehold.it/80x60&amp;text=one" class="img-responsive">
+      </a>
+
+        </li>
+        <li> <a id="carousel-selector-1">
+        <img src="http://placehold.it/80x60&amp;text=two" class="img-responsive">
+      </a>
+
+        </li>
+        <li> <a id="carousel-selector-2">
+        <img src="http://placehold.it/80x60&amp;text=three" class="img-responsive">
+      </a>
+
+        </li>
+        <li> <a id="carousel-selector-3">
+        <img src="http://placehold.it/80x60&amp;text=four" class="img-responsive">
+      </a>
+
+        </li>
+        <li> <a id="carousel-selector-4">
+        <img src="http://placehold.it/80x60&amp;text=five" class="img-responsive">
+      </a>
+
+        </li>
+        <li> <a id="carousel-selector-5">
+        <img src="http://placehold.it/80x60&amp;text=six" class="img-responsive">
+      </a>
+
+        </li>
+        <li> <a id="carousel-selector-6">
+        <img src="http://placehold.it/80x60&amp;text=seven" class="img-responsive">
+      </a>
+
+        </li>
+        <li> <a id="carousel-selector-7">
+        <img src="http://placehold.it/80x60&amp;text=eight" class="img-responsive">
+      </a>
+
+        </li>
+    </ul>
+</div>
+<!--/main slider carousel-->
+  <!-- <div id="myCarousel" class="carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        {{ #each dataEntries2 }}
+        
+        <li data-target="#myCarousel" data-slide-to="{{incr}}"></li>
+        {{/each }}
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        {{ #each dataEntries }}
+        <div class="item active">
+          
+          <img src="{{link}}">
+         
+        </div>
+        {{/each }}
+
+        {{ #each dataEntries2 }}
+        <div class="item">
+          <img src="{{link}}">
+        </div>
+        {{/each }}
+        <div class="item">
+          <img class = "background" src="/resources/upenn3.jpg" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>classify <strong>Penn</strong></h1>
+              <p>The best way to buy and sell things, find housing, engage with and find jobs in the your college community.</p>
+              {{#unless currentUser}}
+              <p><a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Sign up today</a></p>
+              {{/unless}}
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="sr-only">Next</span>
+      </a>
+    </div> -->
+  <hr>
+                
+
+                <!-- Post Content -->
+
+                <p class="lead">Description</p>
+                <p>{{description}}</p>
+
+                <hr>
+
+                <!-- Blog Comments -->
+
+                <!-- Comments Form -->
+                <div class="well">
+                    <h4>Leave a Comment:</h4>
+                    <form role="form">
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+
+                <hr>
+
+                <!-- Posted Comments -->
+
+                <!-- Comment -->
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object" src="http://placehold.it/64x64" alt="">
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading">Start Bootstrap
+                            <small>August 25, 2014 at 9:30 PM</small>
+                        </h4>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                    </div>
+                </div>
+
+                <!-- Comment -->
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object" src="http://placehold.it/64x64" alt="">
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading">Start Bootstrap
+                            <small>August 25, 2014 at 9:30 PM</small>
+                        </h4>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                        <!-- Nested Comment -->
+                        <div class="media">
+                            <a class="pull-left" href="#">
+                                <img class="media-object" src="http://placehold.it/64x64" alt="">
+                            </a>
+                            <div class="media-body">
+                                <h4 class="media-heading">Nested Start Bootstrap
+                                    <small>August 25, 2014 at 9:30 PM</small>
+                                </h4>
+                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                            </div>
+                        </div>
+                        <!-- End Nested Comment -->
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- Blog Sidebar Widgets Column -->
+            <div class="col-md-4">
+
+                <!-- Blog Search Well -->
+                <div class="well">
+                    <h4>Blog Search</h4>
+                    <div class="input-group">
+                        <input type="text" class="form-control">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">
+                                <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                        </span>
+                    </div>
+                    <!-- /.input-group -->
+                </div>
+
+                <!-- Blog Categories Well -->
+                <div class="well">
+                    <h4>Blog Categories</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+                </div>
+
+                <!-- Side Widget Well -->
+                <div class="well">
+                    <h4>Side Widget Well</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Footer -->
+        
+
+    </div>
 <!--main-->
 <div class="container">
 	<div class="row">
    
-     {{> leftBarPostPage}}
-   
-      <!--right-->
-      <div class="col-md-9">
-        <h2 id="sec1"> 
+<!--      {{> leftBarListingPage}} -->
+   <div class="container">
+  <div class="row">
+    <div class = "titlePost">
+     <h2 class = "postPageTitle">      
+       <div>{{title}}</div> 
+     </h2>
+   </div>
+ </div>
+ <div class="row">
+  <div class="col-lg-12">
+    <form name="sentMessage" id="contactForm" novalidate>
+      <div class="row">
+        <div class="col-md-8 leftBar">
+          <p>
+       <div class="posts">
+<h2 id="sec1"> 
           <div class="listingPageHeader">
            <div style= "text-transform:capitalize">{{category}} </div> 
            <div class="smallListings"> &nbsp; listings &nbsp;</div>
            -> {{title}} </div>
-        </h2>
-        <p>
+           <p>
   
           {{> postItemPostPage}}
        
         </p>
-  
-        </div><!--/right-->
+        </h2>
+       {{> postsList}}
+     </div>
+   </p>
+                 
+     </div>
+     <div class="col-md-4">
+      <div class="form-group">
+          <div class = "contactDiv">
+        <input type="submit" value="Contact {{authors}}" class = "contactName"/>
+      </div>
+          <h4 class = "postPageTitle">      
+           <div>Category List</div> 
+         </h4>
+         {{> leftBarListingPage }}
+       </div>    
+ </div>
+ <div class="clearfix"></div>
+
+</div>
+</form>
+</div>
+</div>
+</div>
+      <!--right--><!--/right-->
   	</div><!--/row-->
 </div><!--/container-->
 
