--- a/client/views/home/homesearch.html
+++ b/client/views/home/homesearch.html
@@ -1,4 +1,4 @@
-<template name ="homesearch" style="background-color: gray">
+<!-- <template name ="homesearch" style="background-color: gray">
 	{{> leaderboardHome}}
 </template>
 
@@ -49,3 +49,4 @@
     <span class="score">{{description}}</span>
   </div>
 </template>
+ -->
