--- a/client/views/listings/listingPage/search.html
+++ b/client/views/listings/listingPage/search.html
@@ -43,4 +43,5 @@
 <template name="player">
     <span style="cursor: pointer"><strong>{{title}}</strong></span>
     {{description}}
-</template> -->
+</template>
+ -->
