--- a/client/views/application/searching.html
+++ b/client/views/application/searching.html
@@ -1,16 +1,49 @@
-<template name ="modalSearching">
+<template name ="leaderboard">
 
   <!-- Modal (modal is being rendered in 'home' template)-->
   <div class="modal fade" id="myModalSearching" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" id="customModal">                                             
-                                                
-        <a href="#" class="closingSearch" data-dismiss="modal">X <span class="esc">[esc]</span></a> 
-        
+
+      <div class="closingSearchAlign">
+       <div class="closingSearch">
+        <a href="#" data-dismiss="modal">X <span class="esc">[esc]</span></a> 
+      </div>
     </div>
-  </div> 
+
+
+    <div class="centerSearchContainer">
+    <div class="searchTopMargin">
+        <i class = "glyphicon glyphicon-search bottomSearch"></i>
+        <div class="search-input">
+          {{> esInput index="postsSearch" id="srch-termModal" convertnumber=true}}
+        </div>
+      </div>
+    </div>
+    
+            <div>
+            {{#if inputIsNotEmpty}}
+            {{#esEach index="postsSearch" id="search" options=esOptions}}
+                lallalall {{title}} --> {{description}}
+            {{/esEach}}
+
+            {{#ifEsHasNoResults index="postsSearch" id="search" logic="OR" }}
+                No results found!
+            {{/ifEsHasNoResults}}
+        {{else}}
+            Search for a name (e.g. Peter)
+        {{/if}}
+          </div>
+
+
+
+  </div>
+</div> 
 
 </template>
 
 
 
-
+<template name="player">
+  <span style="cursor: pointer"><strong>{{title}}</strong></span>
+  {{description}}
+</template>
