--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,6 +1,6 @@
 <template name = "home">
 {{>modal}}
-{{>modalSearching}}
+{{>leaderboard}}
 
 
 <!-- Navigation -->
@@ -10,7 +10,7 @@
             <div class="navbar-header page-scroll">
 
                 <a class="logo page-scroll" href="/">logo</a>
-                <a class="fa fa-search search" style="margin-left: 15px" data-toggle="modal" data-target="#myModalSearching"> search</a>
+                <a class="fa fa-search search" style="margin-left: 15px" data-toggle="modal" data-target="#myModalSearching" id="loadSearch"> search</a>
 
             </div>
               {{> errors}}
